# uci-chess-engine-template

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
docs/: architecture.md  spec.md
src/: lib.rs  main.rs
src/board/: mod.rs  position.rs
src/engine/: mod.rs  random.rs  selector.rs  session.rs
src/search/: limits.rs  mod.rs
src/uci/: command.rs  driver.rs  mod.rs  parser.rs  response.rs
tests/: uci_go.rs  uci_handshake.rs  uci_position.rs
